--- a/01-Android/app/src/main/res/values/otros-valores-español.xml
+++ b/01-Android/app/src/main/res/values/otros-valores-español.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="saludo_color">#2EA7B6</color>,
+    <color name="saludo_color_es">#2EA7B6</color>,
 
 </resources>
