--- a/01-Android/app/src/main/res/layout/activity_ggoogle_maps.xml
+++ b/01-Android/app/src/main/res/layout/activity_ggoogle_maps.xml
@@ -5,26 +5,27 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FRecyclerView">
+    tools:context=".GGoogleMaps">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_entrenadores"
-        android:layout_width="304dp"
-        android:layout_height="530dp"
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="289dp"
+        android:layout_height="563dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.641" />
+        tools:context=".GGoogleMaps" />
 
-    <TextView
-        android:id="@+id/tv_total_likes"
+    <Button
+        android:id="@+id/btn_ir_carolina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/rv_entrenadores"
-        app:layout_constraintEnd_toEndOf="@+id/rv_entrenadores"
-        app:layout_constraintStart_toStartOf="@+id/rv_entrenadores"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="20dp"
+        android:text="Carolina"
+        app:layout_constraintBottom_toTopOf="@+id/map"
+        app:layout_constraintEnd_toEndOf="@+id/map"
+        app:layout_constraintStart_toStartOf="@+id/map" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
