--- a/Deber_EquipoBasket/app/src/main/res/values/colors.xml
+++ b/Deber_EquipoBasket/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorFondoTextView">#9C27B0</color>
+    <color name="colorFondoButton">#4E1807</color>
 </resources>
