--- a/03-Examen2/app/src/main/res/values/themes.xml
+++ b/03-Examen2/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Deber_EquipoBasket" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.examen02" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Deber_EquipoBasket" parent="Base.Theme.Deber_EquipoBasket" />
+    <style name="Theme.examen02" parent="Base.Theme.examen02" />
 </resources>
